# manylatents

./: .env_example  .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  EXTENSIONS.md  LOGGING_FIX_SUMMARY.md  MEMORY.md  README.md  check_phate_hyperparams.py  check_phate_hyperparams.sh  compute_phasing_rfmix_arrayjob.sh  compute_rfmix.sh  data_loader.py  diffusion_maps.py  fokker_plank_simdata.py  graph_utils.py  graph_viz_utils.py  hello.py  index.html  macros.py  main.py  main_onerun.sh  main_phate_1000G.sh  main_phate_covid.sh  make_1000G_data.sh  make_HGDP_data.sh  make_HGDP_fis_scores.sh  make_dataset.sh  make_h5.sh  manifold_methods.py  mappings.py  mkdocs.yml  plotting.py  pyproject.toml  requirements.txt  run_pipeline.py  (+8 more)
.github/workflows/: build.yml  dr_tests.yml  publish.yml
AOU_scripts/: 002_download_data.sh  003_compute_rye.sh  004_Compute_PCA.sh  005_compute_rfmix.sh
TODO/: index.html
algorithms/: index.html
api_usage/: index.html
assets/: lrw-ecosystem-showcase.html
cache/: index.html
callbacks/: index.html
checkpoints/: epoch=0-step=4-v1.ckpt  epoch=0-step=4-v2.ckpt  epoch=0-step=4-v3.ckpt  epoch=0-step=4-v4.ckpt  epoch=0-step=4-v5.ckpt  epoch=0-step=4.ckpt  epoch=1-step=8-v1.ckpt  epoch=1-step=8-v2.ckpt  epoch=1-step=8.ckpt
contributing/: index.html
data/: HGDP+1KGP_related_samples.csv  index.html
data/1000G/: 1000G_admix_ratios  1000G_labels  fis_scores.csv
data/1000G_from_tutorial/: 1000G_admix_ratios  1000G_labels
data/HGDP/: HGDP_PHATE_emb_projection.csv  HGDP_admix_ratios  HGDP_labels  fis_scores.csv  is_outliers.txt
docs/: TODO.md  algorithms.md  api_usage.md  cache.md  callbacks.md  contributing.md  data.md  evaluation.md  extension-development-guide.md  extensions.md  index.md  integration_testing_guide.md  local_namespace_testing.md  macros.py  metrics.md  metrics_architecture.md  null_metrics.md  probing.md  testing.md
docs/designs/: hf-representation-audit-architecture.md  probing-architecture.md
docs/guide/: extension-architecture.md
docs/plans/: 2026-02-02-hf-representation-audit.md  2026-02-06-neural-ode-latent-module.md  2026-02-13-gpu-metric-infrastructure-design.md  2026-02-13-gpu-metric-infrastructure-implementation.md  2026-02-15-autogen-docs-design.md  2026-02-15-autogen-docs-plan.md  2026-02-19-embedding-artifact-detection-design.md  2026-03-18-cluster-deploy-preflight-skill.md  2026-03-25-robust-pca-design.md  2026-03-25-robust-pca-plan.md  2026-03-28-metric-routing-and-sampling-design.md
evaluation/: index.html
extensions/: README.md  index.html
manylatents/: __init__.py  __main__.py  api.py  evaluate.py  experiment.py  extensions.py  main.py  test_omics_integration.py
manylatents/algorithms/: __init__.py  cflows_granger.py  diffusionmap_algorithm.py  latent_module_base.py  mds_algorithm.py
manylatents/analysis/: __init__.py  clustering.py
manylatents/callbacks/: __init__.py  debug.py  diffusion_operator.py  probing.py
manylatents/configs/: __init__.py  config.py  config.yaml
manylatents/data/: __init__.py  anndata.py  anndata_dataset.py  aou.py  aou_dataset.py  archetypal.py  capabilities.py  circle_interpolation.py  dataloaderguassian.py  dlatree.py  dummy.py  embryoidbody.py  gaussian_blobs.py  hgdp.py  hgdp_dataset.py  mhi_dataset.py  plink_dataset.py  precomputed_datamodule.py  precomputed_dataset.py  precomputed_mixin.py  saddlesurface.py  singlecell_dataset.py  swissroll.py  synthetic_dataset.py  test_data.py  (+7 more)
metrics/: index.html
notebooks/: 1.0-sn-HGDP_parameters_figures.ipynb  1.0-sn-tree_data_figrues.ipynb  1000G&HGDP_AAnet.ipynb  EDA_HGDP.ipynb  HGDP_utils.py  HeatGeo_1000G&HGDP.ipynb  MSPHATE_HGDP.ipynb  PCA_HGDP.ipynb  diffusion_maps.ipynb  diffusion_maps_disconnected_data.ipynb  dm.ipynb  dm.py  dm_1000G.ipynb  dm_1000G_change_alpha.ipynb  dm_pca_changes_graph.ipynb  dm_simdata.ipynb  hyperparam_experiments.ipynb  msprime_test4.ipynb  pca_1000G.ipynb  phate_1000G_HDBSCAN.ipynb  phate_1000G_admixture.ipynb  phate_1000G_change_t.ipynb  phate_1000G_connectivity.ipynb  phate_1000G_initialseed_discrepency.ipynb  phate_1000G_paramsearch.ipynb  phate_HGDP.ipynb  phate_HGDP2.ipynb  phate_HGDPnomiddle.ipynb  phate_MHI.ipynb  phate_noadmix.ipynb  tree_data_utils.py
probing/: index.html
scripts/: check_docs_coverage.py  clean_up_admixture.py  clean_up_admixture.sh  clean_up_admixture_ukbb.py  compute_phasing.sh  download_data.sh  download_wandb.py  make_1000G_fis_scores.sh  make_metadata.sh  make_metadata_file.py  make_metadata_file_ukbb.py  prep_aou_files.py  prep_embryoid_body_pca.py  process_admixture.py  run_admixture.sh  run_admixture_ukbb.sh  run_sbatch.sh  run_sbatch_folder.sh  run_sbatch_gpu.sh  test_callback_outputs.py  test_offline_callbacks.py
search/: search_index.json
src/: convert_to_h5py.py  create_HGDP_dataset.py  data_loader.py  experiment.py  graph_utils.py  main.py  mappings.py  metric_clustering.py  preprocess.py  test_main.py  train_AE.py
testing/: index.html
tests/: test_affinity_spectrum_protocol.py  test_algorithm_registry.py  test_archetypal.py  test_backend_utils.py  test_balanced_sampling.py  test_bootstrap_ci.py  test_cflows_granger.py  test_cflows_grn_head.py  test_cflows_losses.py  test_cflows_model.py  test_clustering.py  test_compute_eigenvalues_cache.py  test_compute_knn_cache.py  test_config_composition.py  test_dataset_capabilities.py  test_density_spike.py  test_dict_result_flattening.py  test_diffmap_cache.py  test_diffusion_condensation_sampling.py  test_diffusion_map_torchdr.py  test_distillation.py  test_distillation_configs.py  test_distillation_end_to_end.py  test_distillation_from_spec.py  test_dm.py  test_docs_coverage.py  test_docs_macros.py  test_dse_knn.py  test_effective_neighborhood_size.py  test_eigenvalue_cache.py  test_eigenvalue_effective_rank.py  test_evaluate_extension_metrics.py  test_evaluate_metrics.py  test_experiment_extra_outputs.py  test_extension_discovery.py  test_extra_outputs.py  test_fp.py  test_full_api_integration.py  test_full_cache_integration.py  test_gaga.py  (+46 more)
(+1066 files in other folders)
