[project]
name = "manylatents"
version = "0.1.0"
description = "Unified dimensionality reduction and neural network analysis framework"
license = "MIT"
authors = [
    { name = "César Miguel Valdez Córdova", email = "cesar.valdez@mila.quebec" },
    { name = "Matthew Scicluna", email = "matthew.scicluna@mila.quebec" },
    { name = "Shuang Ni", email = "shuang.ni@mila.quebec" },
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
keywords = ["dimensionality-reduction", "embeddings", "manifold-learning", "pytorch-lightning", "hydra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core scientific stack
    "numpy>=1.25",
    "scipy>=1.8,<1.15", # upper bound for archetypes/phate compatibility
    "pandas>=2.0",
    "scikit-learn>=1.2",
    "matplotlib>=3.8",
    # Deep learning
    "torch>=2.3,<3.0",
    "lightning>=2.5",
    "torchmetrics>=1.6",
    "transformers>=4.40",
    "torchdiffeq>=0.2",
    # Optimal transport (for DiffusionMerging)
    "POT>=0.9",
    # Hydra configuration
    "hydra-core>=1.3",
    "hydra-zen>=0.13",
    "hydra-submitit-launcher>=1.2",
    # Dimensionality reduction algorithms
    "phate>=2.0",
    "umap-learn>=0.5",
    "opentsne>=1.0",
    "multiscale-phate",
    "archetypes>=0.6",
    # Graph/topology tools
    "graphtools>=2.0",
    "ripser>=0.6",
    "PyGSP>=0.5",
    # Single-cell / genomics
    "scanpy>=1.10",
    "pyplink>=1.3",
    "pyproj>=3.6",
    # Utilities
    "heatgeo",
    "requests>=2.25",
    "rootutils>=1.0",
    "tqdm>=4.67",
    "rich>=13.9",
    "pydantic>=2.9",
    "Deprecated>=1.2",
    # Experiment tracking & docs
    "wandb>=0.19",
    "gsutil>=5.33",
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocs-macros-plugin>=1.0",
    # Testing
    "pytest>=8.3",
    "datasets>=4.5.0",
]

[project.optional-dependencies]
# Neural SDE support (future)
dynamics = ["torchsde>=0.2"]
# GPU-accelerated DR via TorchDR
torchdr = [
    "torchdr>=0.3,<0.4",
    "faiss-cpu",
]
# Central dogma foundation model encoders (ESM3, Orthrus, Evo2)
# dogma = ["manylatents-omics[dogma]"]  # TODO: re-enable after fixing circular dependency

[project.urls]
Homepage = "https://github.com/latent-reasoning-works/manylatents"
Documentation = "https://latent-reasoning-works.github.io/manylatents/"
Repository = "https://github.com/latent-reasoning-works/manylatents"
Issues = "https://github.com/latent-reasoning-works/manylatents/issues"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["manylatents"]

[tool.uv]
managed = true

[dependency-groups]
dev = ["shop"]

[tool.uv.sources]
manylatents-omics = { git = "ssh://git@github.com/latent-reasoning-works/manylatents-omics.git" }
shop = { path = "../shop", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["manylatents"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[[tool.uv.dependency-metadata]]
name = "heatgeo"
version = "0.0.1"
requires-dist = ["numpy>=1.25"]

[[tool.uv.dependency-metadata]]
name = "archetypes"
version = "0.11.1"
requires-dist = ["scipy>=1.8,<1.15"]

[[tool.uv.dependency-metadata]]
name = "magnipy"
version = "0.1.0"
requires-dist = ["torch>=2.4.1,<3.0.0", "scipy>=1.13.0,<1.15"]
